--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,7 @@ annotated-types==0.7.0
 anyio==4.6.2.post1
 arrow==1.3.0
 binaryornot==0.4.4
-certifi==2024.8.30
+certifi>=2023.7.22
 chardet==5.2.0
 charset-normalizer==3.4.0
 click==8.1.7
