--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -49,7 +49,8 @@ jobs:
 
     - name: Setup Android Toolchain
       run: |
-        sudo apt-get install -y adb
+        sudo apt update
+        sudo apt install android-tools-adb
 
     - name: Flet Build Web
       run: |
